<resources>
    <string name="app_name">DrosselApp</string>
    <string name="blackboard_name">Blackboard</string>
    <string name="faq_name">FAQ</string>
    <string name="sv">Student Village</string>
    <string name="kt">Kamtjatka</string>
    <string name="faq_student_village">This is text for the Student Village part of the faq</string>
    <string name="faq_kt">This is text for the Kamtjatka part of the faq</string>
    <string name="faq_book_title">Booking Process</string>
    <string name="faq_book">This is text for the Booking a Room part of the faq</string>
    <string name="faq_moveIn_title">Moving In</string>
    <string name="faq_moveIn">This is text for the Moving In part of the faq</string>
    <string name="faq_moveOut_title">Moving Out</string>
    <string name="faq_moveOut">This is text for the Moving Out part of the faq</string>
    <string name="faq_about_title">About Drosselbo</string>
    <string name="faq_about">This is text for the About Drosselbo part of the faq</string>
    <string name="faq_living_title">Living in Drosselbo</string>
    <string name="faq_living">This is text for the Living in Drosselbo part of the faq</string>
    <string name="living_broken">Broken things report</string>
    <string name="living_howTo_title">How to live in Drosselbo</string>
    <string name="living_howTo">This is text for the How to live in Drosselbo part of the living Activity</string>
    <string name="living_rules_title">House rules</string>
    <string name="living_rules">This is text for the House rules part of the living Activity</string>
    <string name="living_consumption">Consumption Assistant</string>
    <string name="default_name">Name</string>
    <string name="default_desc">Description</string>
    <string name="default_type">Type</string>
    <string name="default_location">Location</string>
    <string name="default_date">1970/01/01</string>
    <string name="default_price">- DKK</string>
    <string name="buy">Looking For</string>
    <string name="sell">Sell</string>
    <string name="borrow">Borrow</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">Welcome, </string>
    <string name="log_out">Log out</string>
    <string name="login_failed">Login failed</string>
    <string name="washer_avail">Available</string>
    <string name="washer_run">Running</string>
    <string name="washer_notify">Notify me when a machine is available!</string>
    <string name="dryers">Dryers</string>
    <string name="washing_machines">Washing Machines</string>
    <string name="location">Location</string>
    <string name="error">error</string>
    <string name="add_item_name">Item Name</string>
    <string name="add_phone_number">Phone Number</string>
    <string name="add_item">Add Item</string>
</resources>
