<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bbItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="horizontal"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bbName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bbLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_location"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/bbDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_desc"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bbType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_type"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bbDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_date"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/bbPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_price"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
